--- a/src/CliHelperClass.csproj
+++ b/src/CliHelperClass.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="Selenium.WebDriver" Version="4.8.2" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="113.0.5672.6300" />
   </ItemGroup>
 
